--- a/Myassistant/app/src/main/res/layout/activity_edit_clock.xml
+++ b/Myassistant/app/src/main/res/layout/activity_edit_clock.xml
@@ -17,7 +17,7 @@
         android:inputType="textPersonName" />
 
     <LinearLayout
-        android:layout_width="388dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
