--- a/Myassistant/app/src/main/res/layout/fragment3.xml
+++ b/Myassistant/app/src/main/res/layout/fragment3.xml
@@ -16,30 +16,12 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_alignParentLeft="true">
-
-            <Spinner
-                android:id="@+id/chooseYear"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:spinnerMode="dialog"></Spinner>
-
-            <Spinner
-                android:id="@+id/chooseMonth"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:spinnerMode="dialog"></Spinner>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentLeft="true"
             >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:text="支出(元)"
                 android:textColor="#f2f2f2" />
             <TextView
@@ -56,10 +38,33 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:layout_centerHorizontal="true"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="结余(元)"
+                android:textColor="#f2f2f2" />
+            <TextView
+                android:id="@+id/restMoney"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="-800.84"
+                android:textColor="#fff"
+                android:textSize="18dp"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
             android:layout_alignParentRight="true">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:text="收入(元)"
                 android:textColor="#f2f2f2" />
             <TextView
@@ -74,6 +79,7 @@
         </LinearLayout>
     </RelativeLayout>
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/account_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView>
