--- a/Myassistant/app/src/main/res/layout/fragment3_account_item.xml
+++ b/Myassistant/app/src/main/res/layout/fragment3_account_item.xml
@@ -1,32 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp">
+        >
 
         <ImageView
             android:id="@+id/account_item_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/money_out"/>
-        <TextView
-            android:id="@+id/account_item_content"
+            android:src="@drawable/money_out" />
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/account_item_img"
-            android:layout_centerVertical="true"
-            android:text="百事可乐330ML*24"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/account_item_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000"
+                android:text="百事可乐330ML*24" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/item_year"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2018"
+                    android:textSize="12dp"
+                    android:textColor="#9f9f9f"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="年"
+                    android:textSize="12dp"
+                    android:textColor="#9f9f9f"
+                    />
+
+                <TextView
+                    android:id="@+id/item_month"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="07"
+                    android:textSize="12dp"
+                    android:textColor="#9f9f9f"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="月"
+                    android:textSize="12dp"
+                    android:textColor="#9f9f9f"/>
+
+                <TextView
+                    android:id="@+id/item_day"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="17"
+                    android:textSize="12dp"
+                    android:textColor="#9f9f9f"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="日"
+                    android:textSize="12dp"
+                    android:textColor="#9f9f9f"/>
+            </LinearLayout>
+        </LinearLayout>
+
         <TextView
             android:id="@+id/account_item_money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:text="-17.08"
-            android:layout_alignParentRight="true"/>
+            android:text="-17.08" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
